@@ -97,7 +97,6 @@
         </profile>
     </profiles>
 
-
     <dependencies>
 
         <dependency>
@@ -158,7 +157,9 @@
             <suiteXmlFiles>
                 <suiteXmlFile>${suite.name.xml}</suiteXmlFile>
             </suiteXmlFiles>
+            <testFailureIgnore>true</testFailureIgnore>
             <argLine>
+                --illegal-access=permit
                 -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
             </argLine>
         </configuration>
